stopped input from zooming on mobile again

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,12 @@
 .hide {
   display: none; }
 
+input[type='text'],
+input[type='number'],
+input[type='password'],
+textarea {
+  font-size: 16px; }
+
 input {
   box-sizing: border-box; }
   input::placeholder {
@@ -71,7 +77,9 @@ button {
         .card-header .card-container .front-card-content .card-number {
           text-align: center;
           font-size: 1.2rem;
-          letter-spacing: 2px; }
+          letter-spacing: 2px;
+          text-decoration: none;
+          color: #fff; }
         .card-header .card-container .front-card-content .card-details {
           display: flex;
           justify-content: space-between;
@@ -94,6 +102,12 @@ button {
       font-size: .9rem; }
     .form-wrapper form .input-control {
       margin-top: .6rem; }
+      .form-wrapper form .input-control.error input {
+        border-color: #ff5252;
+        outline-color: #ff5252; }
+      .form-wrapper form .input-control.success input {
+        border-color: green;
+        outline-color: green; }
       .form-wrapper form .input-control input {
         width: 100%;
         display: block;
