--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -7,5 +7,8 @@ $Very-dark-violet: hsl(278, 68%, 11%);
 
 // Primary
 $Linear-gradient: hsl(249, 99%, 64%) to hsl(278, 94%, 30%); //active input border
-$Red:hsl(0, 100%, 66%); //input errors
+$red:hsl(0, 100%, 66%); //input errors
+$green: green; 
+
+
 
